Latest config with vscode ligatures and more...

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2289,6 +2289,7 @@ font_size 11
 #: }}}
 
 # Custom configs
+font_size 				13.0
 background_opacity		0.85
 dynamic_background_opacity	yes
 map ctrl+shift+tab next_layout
